--- a/TwitterGo/Base.lproj/Main.storyboard
+++ b/TwitterGo/Base.lproj/Main.storyboard
@@ -423,12 +423,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dgb-AL-PfJ">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </scrollView>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="HaZ-3n-FsE">
                                 <rect key="frame" x="178" y="324" width="20" height="20"/>
                             </activityIndicatorView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dgb-AL-PfJ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -439,12 +439,14 @@
                             <constraint firstItem="Dgb-AL-PfJ" firstAttribute="leading" secondItem="HnM-Yl-Gvt" secondAttribute="leading" id="TFU-d2-mCa"/>
                             <constraint firstItem="rF3-IS-2bi" firstAttribute="top" secondItem="Dgb-AL-PfJ" secondAttribute="bottom" constant="-44" id="aaV-mq-rms"/>
                             <constraint firstItem="Dgb-AL-PfJ" firstAttribute="top" secondItem="HnM-Yl-Gvt" secondAttribute="top" id="fx0-d8-4aD"/>
+                            <constraint firstItem="Dgb-AL-PfJ" firstAttribute="top" secondItem="zyt-MG-Pkb" secondAttribute="bottom" id="gbC-oo-nr2"/>
                             <constraint firstAttribute="centerY" secondItem="HaZ-3n-FsE" secondAttribute="centerY" id="okE-ia-9DO"/>
                             <constraint firstAttribute="trailing" secondItem="Dgb-AL-PfJ" secondAttribute="trailing" id="q7l-bz-h1v"/>
                             <constraint firstItem="Dgb-AL-PfJ" firstAttribute="bottom" secondItem="rF3-IS-2bi" secondAttribute="top" id="tcD-AP-TU6"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="RHz-j7-d2i"/>
                                 <exclude reference="TFU-d2-mCa"/>
                                 <exclude reference="fx0-d8-4aD"/>
                                 <exclude reference="q7l-bz-h1v"/>
