Added comments to my section.

--- a/TwitterGo/Base.lproj/Main.storyboard
+++ b/TwitterGo/Base.lproj/Main.storyboard
@@ -731,7 +731,7 @@
         <image name="tweets_30px" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="E3I-FZ-gRa"/>
-        <segue reference="RZC-AU-X4e"/>
+        <segue reference="yz0-Tl-isD"/>
+        <segue reference="IpV-ir-8ve"/>
     </inferredMetricsTieBreakers>
 </document>
